# diggie

./: INFO.md  LICENSE  Preview.md  README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: event.json  unlisten.json
src-tauri/icons/: .gitignore  icon.icns
src-tauri/src/: client_commands.rs  lib.rs  main.rs
src-tauri/src/discord/: channels.rs  guilds.rs  login.rs  members.rs  messages.rs  mod.rs  reactions.rs
src-tauri/src/notifications/: builder.rs  mod.rs  notification.rs
src-tauri/src/settings/: auth_saver.rs  client_settings.rs  mod.rs
src-tauri/src/utils/: mod.rs  string_utils.rs  window.rs
src/assets/styles/: defaults.scss  global.scss  main.scss  variables.scss
src/components/: EmojiPicker.vue  NotificationWrapper.vue  Notifications.vue
src/components/base/: Avatar.vue  Button.vue  Carousel.vue  Checkbox.vue  ChipSingle.vue  Dropdown.vue  IconifiedInput.vue  Input.vue  Modal.vue  Textarea.vue
src/components/channel/: Channel.vue  ChannelContextMenu.vue
src/components/forms/: LoginForm.vue
src/components/guild/: GuildHeader.vue
src/components/icons/: ArchiveIcon.vue  ArrowIcon.vue  AutoChannelIcon.vue  ChatIcon.vue  CheckIcon.vue  CloseIcon.vue  CodeIcon.vue  CopyCodeIcon.vue  CopyIcon.vue  DeleteIcon.vue  DownloadIcon.vue  EditIcon.vue  EyeHiddenIcon.vue  EyeVisibleIcon.vue  HashIcon.vue  HomeIcon.vue  IdIcon.vue  LinkIcon.vue  LoadingDots.vue  LoadingIcon.vue  MegaphoneIcon.vue  MessageIcon.vue  PersonIcon.vue  PinIcon.vue  PlusIcon.vue  ReactionEmojiIcon.vue  ReplyIcon.vue  SendIcon.vue  SettingsIcon.vue  ShowLayoutIcon.vue  SoundIcon.vue  UserIcon.vue
src/components/message/: Attachments.vue  (+10 more)
src/core/: settings.ts
src/pages/: Chat.vue  DebugPage.vue  EditChannel.vue  EmbedEditor.vue  Forum.vue  GuildInfo.vue  Index.vue  Settings.vue
src/stores/: app.js  app.ts  static.ts
src/types/: IClientSettings.ts  ISavedAuth.ts  ITwemoji.ts  types.ts
src/utils/: color.ts  element.js
(+51 files in other folders)
