[package]
name = "diggie"
version = "0.0.2"
description = "A Discord bot client"
authors = ["oxydien"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "diggie_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" } # For newest discord features (use serenity = { version = "0.12.3" } for stable versions)
serde_json = "1"
tauri-plugin-deep-link = "0.1.2"
lazy_static = "1.4.0"
tokio = "1.36.0"

[dependencies.typesize]
version = "0.1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
